--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -14,6 +14,7 @@
     <system:String x:Key="item13">Fehler beim Starten des Spiels:</system:String>
     <system:String x:Key="item14">Spiel im angegebenen Verzeichnis nicht gefunden.</system:String>
     <system:String x:Key="item15">Sie müssen H1Z1: Just Survive auf Ihrem Steam-Konto besitzen, um es herunterladen zu können.</system:String>
+    <system:String x:Key="item16">Ein oder mehrere Fehler sind aufgetreten:</system:String>
     <system:String x:Key="item17">Anmeldung bei Steam nicht möglich:</system:String>
     <system:String x:Key="item18">HINZUFÜGEN</system:String>
     <system:String x:Key="item19">Bitte stellen Sie sicher, dass Sie das Feld Auth-Code ausfüllen.</system:String>
@@ -42,7 +43,9 @@
     <system:String x:Key="item46">Klicken Sie hier, um die neueste Version des Servers herunterzuladen.</system:String>
     <system:String x:Key="item47">Klicken Sie hier, um den neuesten stabilen Build des Servers herunterzuladen.</system:String>
     <system:String x:Key="item48">Suche nach Aktualisierungen...</system:String>
+    <system:String x:Key="item49">Einige Informationen können fehlen.</system:String>
     <system:String x:Key="item50">Bitte stellen Sie sicher, dass Ihre E-Mails für den 2 Auth. Code geöffnet sind, nachdem Sie sich bei Ihrem Steam Konto angemeldet haben.</system:String>
+    <system:String x:Key="item51">Wählen Sie einen Ordner aus, in den Sie das Spiel herunterladen möchten.</system:String>
     <system:String x:Key="item52">Sie scheinen keine Serverdateien installiert zu haben. Installieren Sie diese im Menü unter Einstellungen.</system:String>
     <system:String x:Key="item53">Fehler beim Starten des Servers:</system:String>
     <system:String x:Key="item54">wird heruntergeladen...</system:String>
@@ -93,7 +96,7 @@
     <system:String x:Key="item116">Entpacke Serverdatei...</system:String>
     <system:String x:Key="item118">Entpacke node Dateien...</system:String>
     <system:String x:Key="item120">Bitte schließe H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe wird gerade verwendet\n\nSchließen Sie alle offenen Instanzen von H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe wird gerade verwendet\n\nBitte schließen Sie alle offenen Instanzen von H1Z1.</system:String>
     <system:String x:Key="item122">Aktuelle Spielversion:</system:String>
     <system:String x:Key="item124">Launcher Version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -108,7 +111,7 @@
     <system:String x:Key="item134">NEIN</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
     <system:String x:Key="item136">Übersetzerinnen</system:String>
-    <system:String x:Key="item137">\n\n(Bist du mit dem Internet verbunden?)</system:String>
+    <system:String x:Key="item137">(Bist du mit dem Internet verbunden?)</system:String>
     <system:String x:Key="item138">\n\n(Dateien werden nicht gelöscht)</system:String>
     <system:String x:Key="item139">H1Emu Server</system:String>
     <system:String x:Key="item140">Einzelspieler</system:String>
@@ -155,4 +158,5 @@
     <system:String x:Key="item182">Unbekannter Antwortcode beim Überprüfen der Gültigkeit Ihres Kontoschlüssels:</system:String>
     <system:String x:Key="item183">Bei der Validierung Ihres Kontoschlüssels ist ein Fehler aufgetreten:</system:String>
     <system:String x:Key="item184">Beim Laden der Serverliste ist ein Fehler aufgetreten:</system:String>
+    <system:String x:Key="item185">Das Server-Installationsskript wurde vorzeitig und unerwartet geschlossen.</system:String>
 </ResourceDictionary>
