--- a/H1EmuLauncher/Language/StringResources.en.xaml
+++ b/H1EmuLauncher/Language/StringResources.en.xaml
@@ -14,6 +14,7 @@
     <system:String x:Key="item13">Error launching game:</system:String>
     <system:String x:Key="item14">Game not found in directory.</system:String>
     <system:String x:Key="item15">You must own H1Z1: Just Survive on your Steam account in order to download.</system:String>
+    <system:String x:Key="item16">One or more errors occurred:</system:String>
     <system:String x:Key="item17">Unable to login to Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
     <system:String x:Key="item19">Please make sure to fill in the Auth Code box.</system:String>
@@ -42,7 +43,9 @@
     <system:String x:Key="item46">Click here to download the latest build of the server.</system:String>
     <system:String x:Key="item47">Click here to download the latest stable build of the server.</system:String>
     <system:String x:Key="item48">Checking for updates...</system:String>
+    <system:String x:Key="item49">Some information may be missing.</system:String>
     <system:String x:Key="item50">Please make sure your emails are open for the 2-Auth code after logging into your Steam account.</system:String>
+    <system:String x:Key="item51">Select a folder where you would like the game to download to.</system:String>
     <system:String x:Key="item52">You don't seem to have server files installed.\n\nInstall these in the Settings menu.</system:String>
     <system:String x:Key="item53">Error launching server:</system:String>
     <system:String x:Key="item54">Downloading...</system:String>
@@ -56,7 +59,7 @@
     <system:String x:Key="item62">Settings...</system:String>
     <system:String x:Key="item63">And a special thanks to everyone who joined the community and kept the motivation alive!</system:String>
     <system:String x:Key="item65">About the project...</system:String>
-    <system:String x:Key="item66">Unable to retrieve GitHub information: {0}\n\nSome information may be missing.</system:String>
+    <system:String x:Key="item66">Unable to retrieve GitHub information:</system:String>
     <system:String x:Key="item67">Not Now</system:String>
     <system:String x:Key="item68">View files...</system:String>
     <system:String x:Key="item69">• Game Version Not Detected •</system:String>
@@ -93,7 +96,7 @@
     <system:String x:Key="item116">Unzipping server files...</system:String>
     <system:String x:Key="item118">Unzipping node files...</system:String>
     <system:String x:Key="item120">Please close H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nClose any open instances of H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version:</system:String>
     <system:String x:Key="item124">Launcher Version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -108,7 +111,7 @@
     <system:String x:Key="item134">NO</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
     <system:String x:Key="item136">Translators</system:String>
-    <system:String x:Key="item137">\n\n(Are you connected to the internet?)</system:String>
+    <system:String x:Key="item137">(Are you connected to the internet?)</system:String>
     <system:String x:Key="item138">\n\n(Files will not be deleted)</system:String>
     <system:String x:Key="item139">H1Emu Server</system:String>
     <system:String x:Key="item140">Singleplayer</system:String>
@@ -155,4 +158,5 @@
     <system:String x:Key="item182">Unknown response code while checking your Account Key validity:</system:String>
     <system:String x:Key="item183">There was an error validating your Account Key:</system:String>
     <system:String x:Key="item184">There was an error loading the server list:</system:String>
+    <system:String x:Key="item185">The server install script closed early and unexpectedly.</system:String>
 </ResourceDictionary>
