--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -14,6 +14,7 @@
     <system:String x:Key="item13">Fout tijdens het opstarten van H1Z1:</system:String>
     <system:String x:Key="item14">Spel niet gevonden in gespecificeerde map.</system:String>
     <system:String x:Key="item15">Je moet H1Z1: Just Survive op je Steam-account hebben om te kunnen downloaden.</system:String>
+    <system:String x:Key="item16">Er zijn een of meer fouten opgetreden:</system:String>
     <system:String x:Key="item17">Kan niet inloggen op Steam:</system:String>
     <system:String x:Key="item18">TOEVOEGEN</system:String>
     <system:String x:Key="item19">Zorg ervoor dat u het veld Auth-code invult.</system:String>
@@ -42,7 +43,9 @@
     <system:String x:Key="item46">Klik hier voor de laatste versie van de server te downoaden.</system:String>
     <system:String x:Key="item47">Klik hier voor de laatste stabiele versie van de server te downoaden.</system:String>
     <system:String x:Key="item48">Controlleren op nieuwe versies...</system:String>
+    <system:String x:Key="item49">Er kan wat informatie ontbreken.</system:String>
     <system:String x:Key="item50">Zorg ervoor dat je e-mails open zijn voor de 2-Auth-code nadat je bent ingelogd op je Steam-account.</system:String>
+    <system:String x:Key="item51">Selecteer een map waarnaar je de game wilt downloaden.</system:String>
     <system:String x:Key="item52">Er zijn geen server bestanden geïnstalleerd installed.\n\nInstaleer deze via het instellingen menu.</system:String>
     <system:String x:Key="item53">Error tijdens het opstarten server:</system:String>
     <system:String x:Key="item54">Downloaden...</system:String>
@@ -86,14 +89,14 @@
     <system:String x:Key="item107">Er was een fout tijdens instaleren van de laatste server:</system:String>
     <system:String x:Key="item108">De laatste server is geïnstalleerd.</system:String>
     <system:String x:Key="item109">Installeren stabiele server...</system:String>
-    <system:String x:Key="item111">There was an error installing the stable server:</system:String>
-    <system:String x:Key="item112">The stable server has been installed.</system:String>
+    <system:String x:Key="item111">Er is een fout opgetreden bij het installeren van de stabiele server:</system:String>
+    <system:String x:Key="item112">De stabiele server is geïnstalleerd.</system:String>
     <system:String x:Key="item113">Controlleren op oude bestanden...</system:String>
     <system:String x:Key="item114">Oude bestanden verwijderen...</system:String>
     <system:String x:Key="item116">Unzippen server bestanden...</system:String>
     <system:String x:Key="item118">Unzippen node bestanden...</system:String>
     <system:String x:Key="item120">Sluit alstublieft H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle instancies van H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle geopende exemplaren van H1Z1.</system:String>
     <system:String x:Key="item122">Huidige spel versie:</system:String>
     <system:String x:Key="item124">Launcher versiev</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -108,7 +111,7 @@
     <system:String x:Key="item134">NEE</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
     <system:String x:Key="item136">Vertalers</system:String>
-    <system:String x:Key="item137">\n\n(Ben je met het internet verbonden?)</system:String>
+    <system:String x:Key="item137">(Ben je met het internet verbonden?)</system:String>
     <system:String x:Key="item138">\n\n(bestanden worden niet verwijderd)</system:String>
     <system:String x:Key="item139">H1Emu Server</system:String>
     <system:String x:Key="item140">Singleplayer</system:String>
@@ -154,4 +157,5 @@
     <system:String x:Key="item182">Onbekende responscode tijdens het controleren van de geldigheid van uw accountsleutel:</system:String>
     <system:String x:Key="item183">Er is een fout opgetreden bij het valideren van uw accountsleutel:</system:String>
     <system:String x:Key="item184">Er is een fout opgetreden bij het laden van de serverlijst:</system:String>
+    <system:String x:Key="item185">Het serverinstallatiescript is vroeg en onverwacht afgesloten.</system:String>
 </ResourceDictionary>
