--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -14,6 +14,7 @@
     <system:String x:Key="item13">Błąd podczas startu gry:</system:String>
     <system:String x:Key="item14">Nie znaleziono gry w podanej ścieżce.</system:String>
     <system:String x:Key="item15">Dla tej wersji gry nie ma serwera testowego. (Grudzień 2016)</system:String>
+    <system:String x:Key="item16">Wystąpił jeden lub więcej błędów:</system:String>
     <system:String x:Key="item17">Nie można zalogować się do Steam:</system:String>
     <system:String x:Key="item18">DODAJ</system:String>
     <system:String x:Key="item19">Pamiętaj, aby wypełnić pole Kod autoryzacji.</system:String>
@@ -42,7 +43,9 @@
     <system:String x:Key="item46">Kliknij tutaj, aby zainstalować najnowszą wersję serwera.</system:String>
     <system:String x:Key="item47">Kliknij tutaj, aby zainstalować stabilną wersję serwera.</system:String>
     <system:String x:Key="item48">Sprawdzanie aktualizacji...</system:String>
+    <system:String x:Key="item49">Może brakować niektórych informacji.</system:String>
     <system:String x:Key="item50">Upewnij się, że masz otwarty email, aby potwierdzić logowanie do konta Steam.</system:String>
+    <system:String x:Key="item51">Wybierz folder, do którego chcesz pobrać grę.</system:String>
     <system:String x:Key="item52">Wygląda na to, że nie zainstalowałeś jeszcze plików serwerowych.\n\nInstall these in the Settings menu.</system:String>
     <system:String x:Key="item53">Błąd podczas startu serwera:</system:String>
     <system:String x:Key="item54">Pobieranie...</system:String>
@@ -93,7 +96,7 @@
     <system:String x:Key="item116">Rozpakowywanie plików serwera...</system:String>
     <system:String x:Key="item118">Rozpakowywanie plików node...</system:String>
     <system:String x:Key="item120">Prosze zamknij H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij uruchomione procesy H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry:</system:String>
     <system:String x:Key="item124">Wersja launchera v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -108,7 +111,7 @@
     <system:String x:Key="item134">NIE</system:String>
     <system:String x:Key="item135">H1Z1: Just Survive</system:String>
     <system:String x:Key="item136">Tłumacze</system:String>
-    <system:String x:Key="item137">\n\n(Czy jesteś połączony z internetem?)</system:String>
+    <system:String x:Key="item137">(Czy jesteś połączony z internetem?)</system:String>
     <system:String x:Key="item138">\n\n(Pliki nie zostaną usunięte)</system:String>
     <system:String x:Key="item139">Serwer H1Emu</system:String>
     <system:String x:Key="item140">Singleplayer</system:String>
@@ -155,4 +158,5 @@
     <system:String x:Key="item182">Nieznany kod odpowiedzi podczas sprawdzania ważności klucza konta:</system:String>
     <system:String x:Key="item183">Podczas weryfikacji klucza konta wystąpił błąd:</system:String>
     <system:String x:Key="item184">Podczas ładowania listy serwerów wystąpił błąd:</system:String>
+    <system:String x:Key="item185">Skrypt instalacyjny serwera został zamknięty przedwcześnie i nieoczekiwanie.</system:String>
 </ResourceDictionary>
