--- a/H1EmuLauncher/SteamFrame/2FA.xaml
+++ b/H1EmuLauncher/SteamFrame/2FA.xaml
@@ -1,34 +1,41 @@
-﻿<Page x:Class="H1EmuLauncher.SteamFrame._2FA"
+﻿<UserControl x:Class="H1EmuLauncher.SteamFrame._2FA"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d" 
       d:DesignWidth="565"
       d:DesignHeight="140"
-      FontFamily="Bahnschrift Light"
-      Title="2FA">
-    
+      FontFamily="Bahnschrift Light">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <Storyboard x:Key="LoadingIconAnimation">
+                <DoubleAnimation Storyboard.TargetName="loadingIconRotateTransform"
+                                 Storyboard.TargetProperty="Angle"
+                                 By="0"
+                                 To="360"
+                                 Duration="0:0:0.8"
+                                 FillBehavior="Stop"
+                                 RepeatBehavior="Forever"/>
+            </Storyboard>
+            
+            <!-- Load dictionary into xaml resources just so we can see on the designer -->
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="..\Language\StringResources.en.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
-        <!-- Please enter 2 factor code text -->
-        <TextBlock x:Name="twoFacInstructionText"
-                   Grid.Column="1"
-                   Margin="7,0,0,0"
-                   VerticalAlignment="Top"
-                   TextWrapping="Wrap"
-                   FontSize="16"
-                   Foreground="White"
-                   Text="{DynamicResource item81}"/>
 
         <!-- Textbox to enter auth code -->
         <TextBox x:Name="authBox"
@@ -49,7 +56,7 @@
         <!-- Hint for auth code textbox -->
         <TextBlock x:Name="authHint"
                    Grid.Row="1"
-                   Padding="35,9,0,0"
+                   Padding="35,8,0,0"
                    Height="35"
                    VerticalAlignment="Top"
                    IsHitTestVisible="False"
@@ -86,14 +93,30 @@
         </Button>
 
         <!-- Loading wheel GIF -->
-        <Image gif:ImageBehavior.AnimatedSource="..\Resources\Loading.gif"
-               x:Name="loadingGif"
+        <Image x:Name="loadingIcon"
+               Source="..\Resources\Loading.png"
                RenderOptions.BitmapScalingMode="Fant"
+               RenderTransformOrigin="0.5, 0.5"
                VerticalAlignment="Top"
                HorizontalAlignment="Right"
                Margin="0,7,17,0"
                Height="20"
                Width="20"
-               Visibility="Hidden"/>
+               Visibility="Hidden">
+
+            <Image.RenderTransform>
+                <RotateTransform x:Name="loadingIconRotateTransform" Angle="0"/>
+            </Image.RenderTransform>
+        </Image>
+
+        <!-- Please enter 2 factor code text -->
+        <TextBlock x:Name="twoFacInstructionText"
+                   Grid.Column="1"
+                   Margin="7,0,0,0"
+                   VerticalAlignment="Top"
+                   TextWrapping="Wrap"
+                   FontSize="16"
+                   Foreground="White"
+                   Text="{DynamicResource item78}"/>
     </Grid>
-</Page>
+</UserControl>
