--- a/H1EmuLauncher/SteamFrame/DownloadStatus.xaml
+++ b/H1EmuLauncher/SteamFrame/DownloadStatus.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="H1EmuLauncher.SteamFrame.DownloadStatus"
+﻿<UserControl x:Class="H1EmuLauncher.SteamFrame.DownloadStatus"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,35 +7,40 @@
       d:DesignWidth="565"
       d:DesignHeight="140"
       FontFamily="Bahnschrift Light"
-      Loaded="StatusLoaded"
-      Title="Download Information">
-    
+      Loaded="StatusLoaded">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+
+            <!-- Load dictionary into xaml resources just so we can see on the designer -->
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="..\Language\StringResources.en.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Downloading game text -->
-        <RichTextBox FontSize="16"
-                     Background="Transparent"
-                     BorderThickness="0"
-                     Foreground="White"
-                     IsReadOnly="True"
-                     Cursor="Arrow">
-            
-            <FlowDocument TextAlignment="Center">
-                <Paragraph>
-                    <Run Text="{DynamicResource item26}"/>
-                    <Run
+        <TextBlock Margin="0,0,0,14"
+                   FontSize="16"
+                   Background="Transparent"
+                   Foreground="White"
+                   Cursor="Arrow"
+                   HorizontalAlignment="Center">
+
+            <Run Text="{DynamicResource item26}"/>
+            <Run
                         Foreground="#FFCA1420" Text="{DynamicResource item135}"/>
-                    <Run Text="{DynamicResource item27}"/>
-                    <Run x:Name="gameDownloadText"
+            <Run Text="{DynamicResource item27}"/>
+            <Run x:Name="gameDownloadText"
                          Foreground="#FFCA1420" Text="----:"/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
+        </TextBlock>
 
         <!-- Status progress bar -->
         <ProgressBar x:Name="downloadProgress"
@@ -69,21 +74,16 @@
         <Button x:Name="cancelDownloadButton"
                 Grid.Row="2"
                 RenderOptions.BitmapScalingMode="Fant"
-                Height="35"
-                Width="140"
+                Height="45"
+                Width="280"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Bottom"
                 Foreground="White"
                 FontFamily="Arial Black"
-                FontSize="20"
+                FontSize="28"
                 BorderThickness="0"
                 Click="CancelDownloadButtonClick"
                 Content="{DynamicResource item28}"
-                Style="{DynamicResource StandardButton}">
-            
-            <Button.Background>
-                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-            </Button.Background>
-        </Button>
+                Style="{DynamicResource StandardButton}"/>
     </Grid>
-</Page>
+</UserControl>
