--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -4,74 +4,122 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Launcher"
-        x:Name="MainMsgBox"
+        Title="MessageBox"
+        x:Name="MessageBox"
         MinWidth="350"
         MaxWidth="1200"
         MinHeight="210"
         MaxHeight="900"
         SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
-        Background="#FF2A2A32"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        ResizeMode="NoResize"
+        RenderTransformOrigin="0.5, 0.5"
+        Background="Transparent"
         FontFamily="Bahnschrift"
         FontSize="16"
-        Activated="MainMsgBoxActivated"
-        Loaded="MainMsgBoxLoaded">
+        Loaded="MainMsgBoxLoaded"
+        Closing="MessageBoxClosing">
 
-        <!-- Hide window border but keep animations -->
-        <WindowChrome.WindowChrome>
-            <WindowChrome GlassFrameThickness="0"
-                          CornerRadius="0"
-                          CaptionHeight="0"
-                          ResizeBorderThickness="0"
-                          UseAeroCaptionButtons="False"/>
+    <Window.RenderTransform>
+        <ScaleTransform x:Name="WindowScaleTransform"/>
+    </Window.RenderTransform>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="Window.Loaded">
+            <EventTrigger.Actions>
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetName="WindowScaleTransform"
+                                         Storyboard.TargetProperty="(ScaleTransform.ScaleX)"
+                                         From="0.9" To="1"
+                                         Duration="0:0:0.1"
+                                         AccelerationRatio="1"/>
 
-        </WindowChrome.WindowChrome>
+                        <DoubleAnimation Storyboard.TargetName="WindowScaleTransform"
+                                         Storyboard.TargetProperty="(ScaleTransform.ScaleY)"
+                                         From="0.9" To="1"
+                                         Duration="0:0:0.1"
+                                         AccelerationRatio="1"/>
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        
-        <Grid.RowDefinitions>
-            <RowDefinition Height="45"/>
-            <RowDefinition Height="30*"/>
-        </Grid.RowDefinitions>
+                        <DoubleAnimation Storyboard.TargetName="MessageBox"
+                                         Storyboard.TargetProperty="Opacity"
+                                         From="0" To="1"
+                                         Duration="0:0:0.1"
+                                         AccelerationRatio="1"/>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger.Actions>
+        </EventTrigger>
+    </Window.Triggers>
 
-        <!-- Grainy texture -->
-        <Grid.Background>
-            <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
-        </Grid.Background>
+    <Window.Resources>
+        <ResourceDictionary>
 
-        <!-- Grid for logo and exit button -->
-        <Grid MouseLeftButtonDown="MoveMessageBox"
-              Background="Transparent">
-            
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            
+            <!-- Load dictionary into xaml resources just so we can see on the designer -->
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="..\Language\StringResources.en.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <Storyboard x:Key="CloseMessageBox">
+                <DoubleAnimation Storyboard.TargetName="WindowScaleTransform"
+                                 Storyboard.TargetProperty="(ScaleTransform.ScaleX)"
+                                 From="1" To="0.9"
+                                 Duration="0:0:0.1"
+                                 AccelerationRatio="1"/>
+
+                <DoubleAnimation Storyboard.TargetName="WindowScaleTransform"
+                                 Storyboard.TargetProperty="(ScaleTransform.ScaleY)"
+                                 From="1" To="0.9"
+                                 Duration="0:0:0.1"
+                                 AccelerationRatio="1"/>
+
+                <DoubleAnimation Storyboard.TargetName="MessageBox"
+                                 Storyboard.TargetProperty="Opacity"
+                                 From="1" To="0"
+                                 Duration="0:0:0.1"
+                                 AccelerationRatio="1"/>
+            </Storyboard>
+        </ResourceDictionary>
+    </Window.Resources>
+
+    <Grid Background="#FF2A2A32">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="45"/>
+                <RowDefinition Height="30*"/>
             </Grid.RowDefinitions>
 
-            <!-- Logo -->
-            <DockPanel Margin="14,2,0,0"
+            <!-- Grainy texture -->
+            <Grid.Background>
+                <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+            </Grid.Background>
+
+            <!-- Grid for logo and exit button -->
+            <Grid MouseLeftButtonDown="MoveMessageBox"
+              Background="Transparent">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Logo -->
+                <DockPanel Margin="14,2,0,0"
                        Height="40"
                        HorizontalAlignment="Left">
 
-                <Image Source="..\Resources\H1EmuIcon.png"
+                    <Image Source="..\Resources\H1EmuIcon.png"
                        Width="104"
                        Height="28"
                        Margin="0,4,0,0"
                        VerticalAlignment="Center"/>
 
-            </DockPanel>
+                </DockPanel>
 
-            <!-- Exit button -->
-            <DockPanel Grid.Column="1">
-                <Button x:Name="CloseButton"
+                <!-- Exit button -->
+                <DockPanel Grid.Column="1">
+                    <Button x:Name="CloseButton"
                         Click="CloseButton_Click"
                         RenderOptions.BitmapScalingMode="Fant"
                         Width="38"
@@ -80,46 +128,41 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         BorderThickness="0"
-                        Style="{StaticResource CloseButtonStyle}">
+                        Style="{StaticResource CloseButtonStyle}"/>
+                </DockPanel>
+            </Grid>
 
-                    <Button.Background>
-                        <ImageBrush ImageSource="..\Resources\Exit.png"/>
-                    </Button.Background>
-                </Button>
-            </DockPanel>
-        </Grid>
-
-        <!-- Main content in darkened area -->
-        <Border Grid.Row="1"
+            <!-- Main content in darkened area -->
+            <Border Grid.Row="1"
                 Margin="15,5,15,15"
                 Background="#1C1B22"
                 UseLayoutRounding="True"
                 CornerRadius="5">
 
-            <!-- Drop shadow effect -->
-            <Border.Effect>
-                <DropShadowEffect BlurRadius="8"
+                <!-- Drop shadow effect -->
+                <Border.Effect>
+                    <DropShadowEffect BlurRadius="8"
                                   Direction="-90"
                                   RenderingBias="Quality"
                                   ShadowDepth="1"/>
-                
-            </Border.Effect>
 
-            <Border CornerRadius="5">
+                </Border.Effect>
 
-                <!-- Grainy texture -->
-                <Border.Background>
-                    <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
-                </Border.Background>
+                <Border CornerRadius="5">
 
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="11*"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
+                    <!-- Grainy texture -->
+                    <Border.Background>
+                        <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                    </Border.Background>
 
-                    <!-- Main message box text -->
-                    <TextBlock x:Name="text"
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="11*"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <!-- Main message box text -->
+                        <TextBlock x:Name="text"
                                Margin="25,10,25,10"
                                Padding="0,5,0,0"
                                VerticalAlignment="Center"
@@ -130,8 +173,8 @@
                                TextWrapping="Wrap"
                                TextAlignment="Center"/>
 
-                    <!-- Close msgbox window button -->
-                    <Button Grid.Row="1"
+                        <!-- Close msgbox window button -->
+                        <Button Grid.Row="1"
                             Click="OkButton"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="100"
@@ -144,14 +187,10 @@
                             FontSize="18"
                             BorderThickness="0"
                             Content="{DynamicResource item92}"
-                            Style="{DynamicResource StandardButton}">
-
-                        <Button.Background>
-                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                        </Button.Background>
-                    </Button>
-                </Grid>
+                            Style="{DynamicResource StandardButton}"/>
+                    </Grid>
+                </Border>
             </Border>
-        </Border>
+        </Grid>
     </Grid>
 </Window>
